[gd_scene load_steps=16 format=3 uid="uid://v2hjcofj8iip"]

[ext_resource type="Script" uid="uid://c4d486soskj4u" path="res://Scripts/mainmenu.gd" id="1_3pujl"]
[ext_resource type="Texture2D" uid="uid://bikvt55in0esa" path="res://Assets/Art/UI/Menu screen.png" id="1_cmhrf"]
[ext_resource type="Texture2D" uid="uid://t072jksobllx" path="res://Assets/Art/UI/logo.png" id="2_d2nv2"]
[ext_resource type="FontFile" uid="uid://dqqnsnb5xkqx7" path="res://Assets/Fonts/8bitoperator_jve.ttf" id="3_igs2m"]
[ext_resource type="Texture2D" uid="uid://b6a7pab0tyxve" path="res://Assets/Art/UI/button.png" id="4_3pujl"]
[ext_resource type="AudioStream" uid="uid://dl8d6cchew8pf" path="res://Assets/Audio/title theme.wav" id="6_5326e"]
[ext_resource type="Script" uid="uid://1e50qlieqvq2" path="res://Scripts/LoopPointMusic.gd" id="7_l2o7r"]
[ext_resource type="Texture2D" uid="uid://d2qr2wp5kmb22" path="res://Assets/Art/UI/WorldMap/worldmap.png" id="8_juwjy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_loy4s"]
texture = ExtResource("1_cmhrf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wgsso"]
texture = ExtResource("2_d2nv2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_igs2m"]
texture = ExtResource("4_3pujl")

[sub_resource type="Animation" id="Animation_juwjy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_l2o7r"]
resource_name = "fade_in"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_t8w0y"]
resource_name = "fade_out"
length = 0.60001004
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.60001004),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eybw1"]
_data = {
&"RESET": SubResource("Animation_juwjy"),
&"fade_in": SubResource("Animation_l2o7r"),
&"fade_out": SubResource("Animation_t8w0y")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_3pujl")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
focus_mode = 1

[node name="Panel" type="Panel" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 976.0
offset_bottom = 544.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_loy4s")

[node name="logo" type="Panel" parent="MainMenu"]
layout_mode = 0
offset_left = 56.0
offset_top = 14.0
offset_right = 491.13043
offset_bottom = 153.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wgsso")

[node name="Play" type="Button" parent="MainMenu"]
z_index = 3
layout_mode = 0
offset_left = 86.0
offset_top = 157.0
offset_right = 384.0
offset_bottom = 237.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_igs2m")
theme_override_font_sizes/font_size = 64
action_mode = 0
button_mask = 7
text = "PLAY"
flat = true

[node name="Panel2" type="Panel" parent="MainMenu/Play"]
z_index = -1
layout_mode = 0
offset_right = 298.0
offset_bottom = 80.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_igs2m")

[node name="Tutorial" type="Button" parent="MainMenu"]
z_index = 3
layout_mode = 0
offset_left = 86.0
offset_top = 243.0
offset_right = 384.0
offset_bottom = 323.0
mouse_default_cursor_shape = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_igs2m")
theme_override_font_sizes/font_size = 64
text = "TUTORIAL"
flat = true

[node name="Panel2" type="Panel" parent="MainMenu/Tutorial"]
z_index = -1
layout_mode = 0
offset_right = 298.0
offset_bottom = 80.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_igs2m")

[node name="Quit" type="Button" parent="MainMenu"]
z_index = 3
layout_mode = 0
offset_left = 86.0
offset_top = 329.0
offset_right = 384.0
offset_bottom = 409.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_igs2m")
theme_override_font_sizes/font_size = 64
text = "QUIT"
flat = true

[node name="Panel2" type="Panel" parent="MainMenu/Quit"]
z_index = -1
layout_mode = 0
offset_right = 298.0
offset_bottom = 80.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_igs2m")

[node name="MainMenuMusic" type="AudioStreamPlayer2D" parent="MainMenu"]
process_mode = 3
stream = ExtResource("6_5326e")
autoplay = true
script = ExtResource("7_l2o7r")
looppoint = 16

[node name="LevelSelect" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 976.0
offset_bottom = 544.0

[node name="BG" type="TextureRect" parent="LevelSelect"]
layout_mode = 0
offset_right = 976.0
offset_bottom = 544.0
texture = ExtResource("8_juwjy")

[node name="Paaseiland" type="Button" parent="LevelSelect"]
layout_mode = 0
offset_left = 154.19934
offset_top = 352.13644
offset_right = 202.19934
offset_bottom = 400.13644
pivot_offset = Vector2(24, 24)
focus_mode = 0
flat = true

[node name="Jakarta" type="Button" parent="LevelSelect"]
layout_mode = 0
offset_left = 739.70386
offset_top = 284.32654
offset_right = 787.70386
offset_bottom = 332.32654
pivot_offset = Vector2(24, 24)
focus_mode = 0
flat = true

[node name="KaapDeGoedeHoop" type="Button" parent="LevelSelect"]
layout_mode = 0
offset_left = 515.13257
offset_top = 356.19745
offset_right = 563.13257
offset_bottom = 404.19745
pivot_offset = Vector2(24, 24)
focus_mode = 0
flat = true

[node name="Portugal" type="Button" parent="LevelSelect"]
layout_mode = 0
offset_left = 442.01553
offset_top = 180.33208
offset_right = 490.01553
offset_bottom = 221.68365
pivot_offset = Vector2(24, 24)
focus_mode = 0
flat = true

[node name="Engeland" type="Button" parent="LevelSelect"]
layout_mode = 0
offset_left = 466.52258
offset_top = 139.66058
offset_right = 514.5226
offset_bottom = 180.33208
pivot_offset = Vector2(24, 24)
focus_mode = 0
flat = true

[node name="Info" type="RichTextLabel" parent="LevelSelect"]
layout_mode = 0
offset_left = 20.21167
offset_top = 433.50195
offset_right = 254.21167
offset_bottom = 544.0
theme_override_fonts/normal_font = ExtResource("3_igs2m")
theme_override_fonts/bold_font = ExtResource("3_igs2m")
theme_override_fonts/bold_italics_font = ExtResource("3_igs2m")
theme_override_fonts/italics_font = ExtResource("3_igs2m")
theme_override_fonts/mono_font = ExtResource("3_igs2m")
bbcode_enabled = true
scroll_active = false

[node name="Fade" type="ColorRect" parent="."]
z_index = 100
offset_left = -1248.0
offset_top = -1776.0
offset_right = 8720.0
offset_bottom = 2704.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="Animations" type="AnimationPlayer" parent="Fade"]
libraries = {
&"": SubResource("AnimationLibrary_eybw1")
}

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(491.13043, 272)

[connection signal="pressed" from="MainMenu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainMenu/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="MainMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="finished" from="MainMenu/MainMenuMusic" to="MainMenu/MainMenuMusic" method="_on_finished"]
[connection signal="mouse_entered" from="LevelSelect/Paaseiland" to="." method="_on_paaseiland_mouse_entered"]
[connection signal="mouse_exited" from="LevelSelect/Paaseiland" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="LevelSelect/Paaseiland" to="." method="StartGame" binds= ["Paaseiland"]]
[connection signal="mouse_entered" from="LevelSelect/Jakarta" to="." method="_on_jakarta_mouse_entered"]
[connection signal="mouse_exited" from="LevelSelect/Jakarta" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="LevelSelect/Jakarta" to="." method="StartGame" binds= ["Jakarta"]]
[connection signal="mouse_entered" from="LevelSelect/KaapDeGoedeHoop" to="." method="_on_kaap_de_goede_hoop_mouse_entered"]
[connection signal="mouse_exited" from="LevelSelect/KaapDeGoedeHoop" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="LevelSelect/KaapDeGoedeHoop" to="." method="StartGame" binds= ["KaapdegoedeHoop"]]
[connection signal="mouse_entered" from="LevelSelect/Portugal" to="." method="_on_portugal_mouse_entered"]
[connection signal="mouse_exited" from="LevelSelect/Portugal" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="LevelSelect/Portugal" to="." method="StartGame" binds= ["Portugal"]]
[connection signal="mouse_entered" from="LevelSelect/Engeland" to="." method="_on_engeland_mouse_entered"]
[connection signal="mouse_exited" from="LevelSelect/Engeland" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="LevelSelect/Engeland" to="." method="StartGame" binds= ["Engeland"]]
